# shopping-assistant

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  coverage.xml  deploy-local.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
app/: app.py
app/api/v1/: routes.py  shopping.py
app/config/: __init__.py  config.py  environment.py
app/database/: redis_client.py
app/graphs/: shopping_graph.py  states.py
app/llm/: anthropic_client.py  base.py  groq_client.py  openai_client.py
app/llm/structure/: base.py
app/middleware/: __init__.py  rate_limiting.py  request_size_limit.py
app/models/: payload.py  response.py
app/prompts/: basic.py
app/retrievers/: base.py  chroma_retriever.py  demo.py  faiss_retriever.py  pgvector_retriever.py  weaviate_retriever.py
app/services/: __init__.py  rag_service.py  session_service.py
app/utils/: __init__.py  cache.py  errors.py  input_sanitization.py  logger.py  security.py
config/: development.yaml  production.yaml  staging.yaml  testing.yaml
docs/: SESSION_MANAGEMENT.md
tests/: __init__.py  conftest.py  requirements.txt  test_api.py  test_integration.py  test_rag_service.py  test_shopping_graph.py
